couple small tweaks

--- a/work-experience.html
+++ b/work-experience.html
@@ -5,14 +5,14 @@
 		<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css" type="text/css" media="screen" />
-    <link rel="icon" type="image/png" href="./images/profile-6.png">
+    <link rel="icon" type="image/png" href="./images/profile-6.png" />
   </head>
   <body>
 
     <header>
       <nav>
         <ul id="myTopnav" class="topnav">
-          <li><a class="logo" href="index.html">
+          <li><a class="logo" href="./">
             <div>
               <img src="images/profile-6.png">
               <span>Nikki</span>
