added protocol to href

--- a/work-experience.html
+++ b/work-experience.html
@@ -52,7 +52,7 @@
           <li>Enforced code quality by driving unit and automated testing across teams</li>
         </ul>
         <p>Technologies Used: PHP, MySQL databases, HTML, CSS, solr, python, PHPunit, memcached, javascript</p>
-        <p>Website: <a href="www.shapeways.com">www.shapeways.com</a></p>
+        <p>Website: <a href="http://www.shapeways.com">www.shapeways.com</a></p>
       </article>
 
       <article>
